syntax = "proto3";

package grpc;

service QueryPrinterGRPC {
    rpc PrintParameters (Request) returns (Response);
}

message Request {
    string query = 1;
}

message Response {
    string param1 = 1;
    string param2 = 2;
    string param3 = 3;
}
